added network configuration to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
      - .env
     command: bash -c "ray start --head --redis-port=${PORT} && sleep infinity"
     shm_size: 4g
+    networks:
+      ray_net:
+        ipv4_address: 172.63.0.2
+
   client:
     build:
       context: ./
@@ -16,6 +20,9 @@ services:
      - .env
     command: bash -c "ray start --redis-address=${HOST}:${PORT} && sleep infinity"
     shm_size: 4g
+    networks:
+      ray_net:
+        ipv4_address: 172.63.0.${IP}
   develop:
     build:
       context: ./
@@ -23,4 +30,13 @@ services:
      - .env
     volumes:
       - ./workspace:/workspace
+    networks:
+      ray_net:
+        ipv4_address: 172.63.0.${IP}
     
+networks:
+  ray_net:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.63.0.0/16
